--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,4 @@
-spring.application.name=algafood-api
 #Ver Run->Edit Configurations->Spring Boot->AlgafoodApiApplication->Active Profiles
-spring.profiles.active=dev
-#server.port=8081
-notificador.email.host-servidor=smtp.algafood.com.br
-notificador.email.porta-servidor=28
+#spring.profiles.active=dev
+notificador.email.host-servidor=smtp.algafood.local
+notificador.email.porta-servidor=30
