--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
+spring.profiles.active=prod
 spring.application.name=algafood-api
-spring.profiles.active=dev
+notificador.email.porta-servidor=28
+#server.port=8081
